<resources>
    <!-- 空格 http://blog.csdn.net/z1074971432/article/details/12753539 -->
    <string name="blank_space">&#160;</string>

    <string name="permission_storage_refused">您拒绝了文件读写的权限，请到设置中修改</string>
    <string name="permission_camera_refused">您拒绝了使用摄像头的权限，请到设置中修改</string>
    <string name="permission_record_audio_refused">您拒绝了使用麦克风的权限，请到设置中修改</string>
    <string name="permission_location_refused">您拒绝了使用定位的权限，请到设置中修改</string>
    <string name="permission_read_phone_state_refused">您拒绝了读取手机信息的权限，请到设置中修改</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">发生意外错误。\n抱歉，给您带来不便。</string>
    <string name="customactivityoncrash_error_activity_restart_app">重新启动</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭程序</string>
    <string name="customactivityoncrash_error_activity_error_details">错误日志</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制日志</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">复制日志</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>
    <string name="beauty_meibai">美白</string>
    <string name="beauty_mopi">磨皮</string>
    <string name="beauty_hongrun">红润</string>
    <string name="beauty_face">美肤</string>
    <string name="beauty_bright">亮度</string>

    <!--img-->
    <string name="img_camera_cancel">取消拍照</string>
    <string name="img_alumb_cancel">取消选择</string>
    <string name="img_crop_cancel">取消裁剪</string>

    <string name="live_send_gift_1">送</string>
    <string name="live_send_gift_2">个</string>
    <string name="live_send_gift_3">送了</string>
    <string name="live_send_gift_4">送了</string>
    <string name="version_update">版本更新</string>
    <string name="version_immediate_use">立即使用</string>
    <string name="version_not_update">暂不更新</string>
    <string name="version_latest">已经是最新版本</string>
    <string name="version_download_url_error">下载地址无效</string>

    <string name="trend_share_title">分享至:</string>
    <string name="trend_share_qq">QQ</string>
    <string name="trend_share_weixin">微信</string>
    <string name="trend_share_pyq">朋友圈</string>
    <string name="trend_share_qqpyq">qq朋友圈</string>

    <string name="video_say_something">说点什么吧~</string>
    <string name="video_download_success">视频下载成功</string>
    <string name="video_download_failed">视频下载失败</string>
    <string name="video_no_more_video">没有更多视频</string>
    <string name="video_comment">评论</string>
    <string name="video_comment_cannot_self">不能给自己点赞</string>
    <string name="video_no_comment">暂无评论，快来抢沙发吧</string>
    <string name="video_comment_reply">回复</string>
    <string name="video_comment_expand">展开更多回复</string>
    <string name="video_comment_collapsed">收起</string>
    <string name="video_record_camera">翻转</string>
    <string name="video_record_flash">闪光灯</string>
    <string name="video_record_camera_failed">摄像头打开失败</string>
    <string name="video_record_audio_failed">麦克风打开失败</string>
    <string name="video_record_failed">录制失败</string>
    <string name="video_record_tip_1">别着急，画面还没出来</string>
    <string name="video_record_tip_2">还有录制的任务没有结束</string>
    <string name="video_record_tip_3">传入的视频路径为空</string>
    <string name="video_record_tip_4">版本太低</string>
    <string name="video_record_speed_1">极慢</string>
    <string name="video_record_speed_2">慢</string>
    <string name="video_record_speed_3">正常</string>
    <string name="video_record_speed_4">快</string>
    <string name="video_record_speed_5">极快</string>
    <string name="video_process_1">视频预处理中...</string>
    <string name="video_process_failed">视频预处理失败</string>
    <string name="video_process_cancel">视频预处理取消</string>
    <string name="video_processing">处理中</string>
    <string name="video_edit_status_error">状态异常，停止编辑</string>
    <string name="video_choose_music">选择音乐</string>
    <string name="video_search_music">搜索歌曲名称</string>
    <string name="video_music_hot">热门歌曲</string>
    <string name="video_music_favorite">我的收藏</string>
    <string name="video_edit_filter">滤镜</string>
    <string name="video_edit_cut">裁剪</string>
    <string name="video_edit_special">特效</string>
    <string name="video_cut_tip">截取所需音频片段</string>
    <string name="video_edit_origin">原声</string>
    <string name="video_edit_cut_tip">拖拽两侧滑块选择裁剪区域</string>
    <string name="video_pub_des_tip">说些什么...</string>
    <string name="video_pub_pub">发布</string>
    <string name="video_pub">视频发布</string>
    <string name="video_process_2">视频生成中</string>
    <string name="video_generate_success">生成视频成功</string>
    <string name="video_generate_failed">生成视频失败</string>
    <string name="video_give_up_pub">是否放弃发布此条信息</string>
    <string name="video_no_local">未找到本地视频</string>
    <string name="video_local">本地视频</string>
    <string name="video_duration_error">视频时长不符合要求</string>
    <string name="video_cover_img_failed">生成视频封面图失败</string>
    <string name="video_title_empty">请添加视频描述</string>
    <string name="video_pub_ing">发布中</string>
    <string name="video_pub_success">发布成功</string>
    <string name="video_pub_success_2">发布成功，请等待审核</string>
    <string name="video_save_save">仅保存</string>
    <string name="video_save_pub">仅发布</string>
    <string name="video_save_save_and_pub">保存并发布</string>
    <string name="video_re_record">重新拍摄</string>
    <string name="video_exit">退出</string>
    <string name="video_edit_cut_tip_2">长按可添加特效</string>
    <string name="video_pub_failed">发布失败</string>
    <string name="video_no_video_home_1">你还没有视频作品</string>
    <string name="video_no_video_home_2">赶快去拍摄上传吧</string>
    <string name="video_no_video_home_3">TA还没有视频作品</string>
    <string name="video_my_video">我的视频</string>
    <string name="video_report_tip_1">选择举报理由</string>
    <string name="video_report_tip_2">更多详细信息请在说明框中描述 (选填)</string>
    <string name="video_report_submit">提交</string>
    <string name="video_report_tip_3">请选择举报理由</string>
    <string name="video_report_tip_4">举报成功</string>
    <string name="video_scroll_top">已经到顶了哦</string>
    <string name="video_record_delete_last">确定删除上一段视频？</string>
    <string name="video_edit_exit">是否退出视频编辑</string>
    <string name="radio_picture">拍摄</string>
    <string name="radio_video">视频</string>
    <string name="picture_local">相册</string>
    <string name="picture_no_local">未找到本地图片</string>
    <string name="picture_choose_confirm">完成</string>
    <string name="video_edit_fail">视频编辑失败，请重新录制</string>

    <string name="send">发送</string>
    <string name="content_empty">请输入内容</string>

    <string name="dialog_tip">提示</string>
    <string name="add">添加</string>
    <string name="accept">接受</string>
    <string name="all">全部</string>
    <string name="video_record">录制</string>
    <string name="alumb">相册</string>
    <string name="cancel">取消</string>
    <string name="camera">拍照</string>
    <string name="preview">预览</string>
    <string name="confirm">确定</string>
    <string name="edit_profile_right_date">请选择正确的日期</string>

    <!--请求失败-->
    <string name="load_failure">网络请求失败</string>
    <string name="load_failure_2">请检查网络连接后重试~</string>
    <string name="reload">重试</string>

    <string name="copy_link">复制链接</string>
    <string name="copy_success">复制成功</string>
    <string name="choose_flie">选择文件</string>

    <string name="coin_pay_ali">支付宝（推荐）</string>
    <string name="coin_pay_wx">微信</string>
    <string name="pay_vip_success">支付成功</string>
    <string name="pay_vip_fail">支付失败</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>

    <string name="nofinish">去完成</string>
    <string name="finish">已完成</string>

    <string name="main_click_next_exit">再按一次退出</string>

    <string name="wish_add_title">新建心愿单</string>
    <string name="wish_generate_success">心愿设置成功</string>
    <string name="live_gift_send_lian_3">连送 x</string>
    <string name="live_gift_send_lian_2">x</string>
    <string name="live_gift_send">赠送</string>
    <string name="live_gift_send_lian">连送</string>


    <string name="im_type_image">[图片]</string>
    <string name="im_type_voide">[语音]</string>
    <string name="im_type_gift">[礼物消息]</string>
    <string name="im_type_call_voice">[语音通话]</string>
    <string name="im_type_call_video">[视频通话]</string>
    <string name="im_type_shop_order">[购物订单]</string>


    <string name="live_duration">直播时长</string>
    <string name="live_watch_num">观看人数</string>
    <string name="live_end_ing">关播中</string>
    <string name="live_end">本场直播已结束</string>
    <string name="live_back">返回首页</string>
    <string name="profit_detail">收益明细</string>
    <string name="guild_profit_detail">工会收益明细</string>
    <string name="cash_record">提现记录</string>
    <string name="no_data">未发现更多内容。去其他页面找找吧~</string>

    <string name="live_say_to_others">来聊聊天...</string>
    <string name="live_say_to_anchor">对TA说点什么…</string>

    <string name="main_near">附近</string>
</resources>
