<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_shadow"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_tip"
        android:textColor="@color/textColor2New"
        android:textSize="16sp" />


    <LinearLayout
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/grey_rect3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/content"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="输入收费金额"
            android:textColorHint="#999999"
            android:inputType="numberDecimal"
            android:digits="1234567890."
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingTop="6dp"
            android:paddingRight="10dp"
            android:paddingBottom="6dp"
            android:textColor="@color/textColor2New"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_coin_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:textSize="14sp"
            android:text="金币/分钟"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/textColorD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">


        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/textColor9"
            android:textSize="14sp" />

        <View
            android:id="@+id/viewDialogCancelDivider"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/textColorD" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#D790F5"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>