<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.kalacheng.live.component.viewmodel.ApiCloseLiveViewModel" />

    </data>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/Close_re"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
           />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="#80000000"/>
        <ImageView
            android:id="@+id/avatar_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#33000000">



            <LinearLayout
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#30ffffff"
                    android:visibility="visible"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/watch_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@{String.valueOf(viewModel.bean.nums)}"
                            android:textColor="@color/color_FFffffff"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="@string/live_watch_num"
                            android:textColor="@color/color_FFffffff" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_votes"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/votes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@{String.valueOf(viewModel.bean.addFollow)}"
                            android:textColor="@color/color_FFffffff"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/votes_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="新增关注"
                            android:textColor="@color/color_FFffffff" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textColor="@color/color_FFffffff"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="@string/live_duration"
                            android:textColor="@color/color_FFffffff" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lin_anchor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fans_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textColor="@color/color_FFffffff"
                            android:text="@{String.valueOf(viewModel.bean.addFansGroup)}"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="加入粉丝团"
                            android:textColor="@color/color_FFffffff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/thisfield_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@{String.valueOf((long)viewModel.bean.votes)}"
                            android:textColor="@color/color_FFffffff"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="本场收益"
                            android:textColor="@color/color_FFffffff" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/reward_num"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@{String.valueOf(viewModel.bean.rewardNumber)}"
                            android:textColor="@color/color_FFffffff"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="打赏人数"
                            android:textColor="@color/color_FFffffff" />

                    </LinearLayout>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:visibility="visible"
                    android:background="#30ffffff" />
            </LinearLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/close_anchor_headimage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/x50"
                app:riv_oval="true"
                android:src="@mipmap/ic_launcher"
                bind:image="@{viewModel.bean.avatar}"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/close_anchor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/close_anchor_headimage"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/x14"
                android:text="@{viewModel.bean.anchorName}"/>
            <TextView
                android:id="@+id/close_anchor_follow"
                android:layout_width="@dimen/x90"
                android:layout_height="@dimen/x30"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/close_anchor_name"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/x20"
                android:background="@drawable/bg_live_end_btn"
                android:text="+  关注"/>
            <TextView
                android:id="@+id/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/live_end"
                android:layout_below="@+id/close_anchor_follow"
                android:textColor="@color/color_FFffffff"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/group"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/bg_live_end"
                android:gravity="center"
                android:text="@string/live_back"
                android:textColor="@color/color_FFffffff"
                android:textSize="16sp" />


        </RelativeLayout>

    </RelativeLayout>
</layout>